--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-elastic-carousel": "^0.11.5",
+    "react-progressive-image": "^0.6.0",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
